--- a/Homework/Introcl_homework_1.ipynb
+++ b/Homework/Introcl_homework_1.ipynb
@@ -112,11 +112,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thee aleph athlete theta\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here. "
+    "a = \"alphabet\"\n",
+    "\n",
+    "#a.\n",
+    "#thee\n",
+    "\n",
+    "thee = a[-1] + a[3] + a[-2]*2\n",
+    "\n",
+    "#b.\n",
+    "#aleph\n",
+    "\n",
+    "aleph = a[0] + a[1] + a[-2] + a[2:4]\n",
+    "\n",
+    "#c.\n",
+    "#athlete\n",
+    "\n",
+    "athlete = a[0] + a[-1] + a[3] + a[1] + a[-2] + a[-1] + a[-2]\n",
+    "\n",
+    "#d.\n",
+    "#theta\n",
+    "\n",
+    "theta = a[-1] + a[3] + a[-2] + a[-1] + a[0]\n",
+    "\n",
+    "print(thee, aleph, athlete, theta)"
    ]
   },
   {
@@ -141,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -166,16 +196,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 181,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is Digit:  \n",
+      "\n",
+      "a.  <re.Match object; span=(0, 5), match='12345'>\n",
+      "b.  None\n",
+      "\n",
+      " Is Alpha:  \n",
+      "\n",
+      "c.  <re.Match object; span=(0, 5), match='AbCDe'>\n",
+      "d.  None\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here: \n",
     "# regular expression that matches whenever isdigit() returns True,\n",
     "# and does not match otherwise\n",
     "\n",
+    "import re\n",
+    "\n",
+    "a = \"12345\"\n",
+    "b = \"123a\"\n",
+    "c = \"AbCDe\"\n",
+    "d = \"abc,d\"\n",
+    "\n",
+    "#regex_isdigit = \"^\\D+?\\d+^\\D+?\"\n",
+    "\n",
+    "regex_isdigit = r\"^\\d+$\"\n",
+    "\n",
+    "print(\"Is Digit: \", \"\\n\")\n",
+    "print(\"a. \", re.search(regex_isdigit, a))\n",
+    "print(\"b. \", re.search(regex_isdigit, b))\n",
+    "\n",
     "# regular expression that matches whenever isalpha() returns True,\n",
-    "# and does not match otherwise\n"
+    "# and does not match otherwise\n",
+    "\n",
+    "regex_isalpha = r\"^[A-Za-z]+$\"\n",
+    "\n",
+    "print(\"\\n\", \"Is Alpha: \", \"\\n\")\n",
+    "print(\"c. \", re.search(regex_isalpha, c))\n",
+    "print(\"d. \", re.search(regex_isalpha, d))"
    ]
   },
   {
