--- a/Homework/Introcl_homework_1.ipynb
+++ b/Homework/Introcl_homework_1.ipynb
@@ -10,8 +10,8 @@
     "\n",
     "## Due: Wednesday September 7, 3pm right before class\n",
     "\n",
-    "## Your name:\n",
-    "## Your EID:\n",
+    "## Your name: Eloragh Espie\n",
+    "## Your EID: eae2273\n",
     "\n",
     "This homework comes with the following files:\n",
     "\n",
