--- a/Homework/Introcl_homework_1.ipynb
+++ b/Homework/Introcl_homework_1.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
     "\n",
     "#regex_isdigit = \"^\\D+?\\d+^\\D+?\"\n",
     "\n",
-    "regex_isdigit = r\"^\\d+$\"\n",
+    "regex_isdigit = r\"^\\d*$\"\n",
     "\n",
     "print(\"Is Digit: \", \"\\n\")\n",
     "print(\"a. \", re.search(regex_isdigit, a))\n",
@@ -238,7 +238,7 @@
     "# regular expression that matches whenever isalpha() returns True,\n",
     "# and does not match otherwise\n",
     "\n",
-    "regex_isalpha = r\"^[A-Za-z]+$\"\n",
+    "regex_isalpha = r\"^[A-Za-z]*$\"\n",
     "\n",
     "print(\"\\n\", \"Is Alpha: \", \"\\n\")\n",
     "print(\"c. \", re.search(regex_isalpha, c))\n",
