--- a/Homework/Introcl_homework_1.ipynb
+++ b/Homework/Introcl_homework_1.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -267,9 +267,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 245,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(70, 72), match=':)'>\n",
+      "<re.Match object; span=(28, 31), match=':-/'>\n",
+      "<re.Match object; span=(34, 37), match=':-('>\n",
+      "<re.Match object; span=(44, 46), match=';)'>\n",
+      "<re.Match object; span=(18, 21), match='8-)'>\n",
+      "<re.Match object; span=(22, 26), match=';-))'>\n",
+      "<re.Match object; span=(38, 41), match='8-/'>\n",
+      "<re.Match object; span=(56, 59), match=':-('>\n",
+      "<re.Match object; span=(32, 35), match=':-('>\n"
+     ]
+    }
+   ],
    "source": [
     "tweet1 = \"#FollowFriday for being top engaged members in my community this week :)\"\n",
     "tweet2 = \"@Lamb2ja Hey James! How odd :-/ Please call our Contact Centre on 02392441234 and we will be able to assist you :) Many thanks!\"\n",
@@ -282,7 +298,31 @@
     "tweet9 = \"Popped like a helium balloon..  :-(\" \n",
     "\n",
     "# your code here\n",
-    "import re"
+    "import re\n",
+    "\n",
+    "#a.\n",
+    "\n",
+    "smiley1 = r\":-?([\\(|\\)|\\/])\"\n",
+    "\n",
+    "print(re.search(smiley1, tweet1))\n",
+    "print(re.search(smiley1, tweet2))\n",
+    "print(re.search(smiley1, tweet6))\n",
+    "\n",
+    "#b.\n",
+    "\n",
+    "smiley2 = r\"(:|;|8)-?([\\(|\\)|\\/])*\"\n",
+    "\n",
+    "print(re.search(smiley2, tweet3))\n",
+    "print(re.search(smiley2, tweet4))\n",
+    "print(re.search(smiley2, tweet5))\n",
+    "\n",
+    "#c.\n",
+    "\n",
+    "smiley3 = r\"(:|;|8)'?-?(\\(|\\)|\\/|D)*\"\n",
+    "\n",
+    "print(re.search(smiley3, tweet7))\n",
+    "print(re.search(smiley3, tweet8))\n",
+    "print(re.search(smiley3, tweet9))"
    ]
   },
   {
@@ -303,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,11 +372,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 268,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "And Peter with hi sword still drawn in hi hand went with \n",
+      "the L to the eastern edge of the hill-top.  There a beautiful \n",
+      "sight met their eye.  The sun wa sett behind their back.  \n",
+      "That meant that the whole country below them lay in the even \n",
+      "light--forest and hill and valley and, wind away like a \n",
+      "silver snake, the lower part of the great river.  And beyond \n",
+      "all thi, mile away, wa the sea, and beyond\n",
+      "the sea the sky, full of cloud which were just turn rose colour\n",
+      "with the reflect of the sunset.  But just where the land of Narnia\n",
+      "met the sea--in fact, at the mouth of the great river--there wa\n",
+      "someth on a little hill, shin.  It wa shin because it wa a\n",
+      "castle and of course the sunlight wa reflect from all the window\n",
+      "which look toward Peter and the sunset; but to Peter it look like\n",
+      "a great star rest on the seashore.\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(re.sub(r\"[A-Za-z]*(ing|ed|ion|s)\\b\", \"<REDACTED>\", llw))"
    ]
   },
   {
@@ -354,11 +416,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 273,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "And Peter with his sword still drawn in his hand went with \n",
+      "the <REDACTED> to the eastern edge of the hill-top.  There a beautiful \n",
+      "sight met their eyes.  The sun was setting behind their backs.  \n",
+      "That meant that the whole country below them lay in the evening \n",
+      "light--forest and hills and valleys and, winding away like a \n",
+      "silver snake, the lower part of the great river.  And beyond \n",
+      "all this, miles away, was the sea, and beyond\n",
+      "the sea the sky, full of clouds which were just turning rose colour\n",
+      "with the <REDACTED> of the sunset.  But just where the land of Narnia\n",
+      "met the sea--in fact, at the mouth of the great river--there was\n",
+      "something on a little hill, shining.  It was shining because it was a\n",
+      "castle and of course the sunlight was reflected from all the windows\n",
+      "which looked towards Peter and the sunset; but to Peter it looked like\n",
+      "a great star resting on the seashore.\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "pattern1 = r\"[A-Za-z]+ion\\b\"\n",
+    "\n",
+    "print(re.sub(pattern1, \"<REDACTED>\", llw))"
    ]
   },
   {
@@ -376,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
