--- a/Homework/Introcl_homework_1.ipynb
+++ b/Homework/Introcl_homework_1.ipynb
@@ -68,7 +68,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*(your text answer here: double-click to edit)*"
+    "*(your text answer here: double-click to edit)*\n",
+    "\n",
+    "Variables a, c, and h are not valid variable names. Variables a and h are disjointed, the words are not connected, making it invalid. C is connected by a dash instead of an underscore, making it invalid."
    ]
   },
   {
@@ -82,7 +84,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*(your text answer here: double-click to edit)*"
+    "*(your text answer here: double-click to edit)*\n",
+    "\n",
+    "Variable e is valid, but it shouldn't be used as a variable name. \"if\" is a statement in Python and problems can arise if it is redefined as a variable."
    ]
   },
   {
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -246,6 +250,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -267,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,33 +383,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "And Peter with hi sword still drawn in hi hand went with \n",
-      "the L to the eastern edge of the hill-top.  There a beautiful \n",
-      "sight met their eye.  The sun wa sett behind their back.  \n",
-      "That meant that the whole country below them lay in the even \n",
-      "light--forest and hill and valley and, wind away like a \n",
+      "And Peter with  sword still drawn in  hand went with \n",
+      "the  to the eastern edge of the hill-top.  There a beautiful \n",
+      "sight met their .  The sun   behind their .  \n",
+      "That meant that the whole country below them lay in the  \n",
+      "light--forest and  and  and,  away like a \n",
       "silver snake, the lower part of the great river.  And beyond \n",
-      "all thi, mile away, wa the sea, and beyond\n",
-      "the sea the sky, full of cloud which were just turn rose colour\n",
-      "with the reflect of the sunset.  But just where the land of Narnia\n",
-      "met the sea--in fact, at the mouth of the great river--there wa\n",
-      "someth on a little hill, shin.  It wa shin because it wa a\n",
-      "castle and of course the sunlight wa reflect from all the window\n",
-      "which look toward Peter and the sunset; but to Peter it look like\n",
-      "a great star rest on the seashore.\n"
+      "all ,  away,  the sea, and beyond\n",
+      "the sea the sky, full of  which were just  rose colour\n",
+      "with the  of the sunset.  But just where the land of Narnia\n",
+      "met the sea--in fact, at the mouth of the great river--there \n",
+      " on a little hill, .  It   because it  a\n",
+      "castle and of course the sunlight   from all the \n",
+      "which   Peter and the sunset; but to Peter it  like\n",
+      "a great star  on the seashore.\n"
      ]
     }
    ],
    "source": [
     "# your code here\n",
-    "print(re.sub(r\"[A-Za-z]*(ing|ed|ion|s)\\b\", \"<REDACTED>\", llw))"
+    "print(re.sub(r\"[A-Za-z]*(ing|ed|ion|s)\\b\", \"\", llw))"
    ]
   },
   {
@@ -416,15 +427,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Pattern 1 \n",
+      "\n",
       "And Peter with his sword still drawn in his hand went with \n",
-      "the <REDACTED> to the eastern edge of the hill-top.  There a beautiful \n",
+      "the Lion to the eastern edge of the hill-top.  There a beautiful \n",
       "sight met their eyes.  The sun was setting behind their backs.  \n",
       "That meant that the whole country below them lay in the evening \n",
       "light--forest and hills and valleys and, winding away like a \n",
@@ -436,6 +449,23 @@
       "something on a little hill, shining.  It was shining because it was a\n",
       "castle and of course the sunlight was reflected from all the windows\n",
       "which looked towards Peter and the sunset; but to Peter it looked like\n",
+      "a great star resting on the seashore. \n",
+      "\n",
+      "Pattern 2 \n",
+      "\n",
+      "And Peter with his sword still drawn in his hand went with \n",
+      "the Lion to the eastern edge of the hill-top.  There a beautiful \n",
+      "sight met their <REDACTED>.  The sun was setting behind their backs.  \n",
+      "That meant that the whole country below them lay in the evening \n",
+      "light--forest and hills and <REDACTED> and, winding away like a \n",
+      "silver snake, the lower part of the great river.  And beyond \n",
+      "all <REDACTED>, miles away, was the sea, and beyond\n",
+      "the sea the sky, full of clouds which were just turning rose colour\n",
+      "with the reflection of the sunset.  But just where the land of Narnia\n",
+      "met the sea--in fact, at the mouth of the great river--there was\n",
+      "something on a little hill, shining.  It was shining because it was a\n",
+      "castle and of course the sunlight was reflected from all the <REDACTED>\n",
+      "which looked <REDACTED> Peter and the sunset; but to Peter it looked like\n",
       "a great star resting on the seashore.\n"
      ]
     }
@@ -443,9 +473,15 @@
    "source": [
     "# your code here\n",
     "\n",
-    "pattern1 = r\"[A-Za-z]+ion\\b\"\n",
+    "pattern1 = r\"\\b[A-Za-z][A-Za-z]+ion\\b\"\n",
     "\n",
-    "print(re.sub(pattern1, \"<REDACTED>\", llw))"
+    "print(\"Pattern 1\", \"\\n\")\n",
+    "print(re.sub(pattern1, \"<REDACTED>\", llw), \"\\n\")\n",
+    "\n",
+    "pattern2 = r\"\\b([A-Za-z][A-Za-z][A-Za-z])+s\\b\"\n",
+    "\n",
+    "print(\"Pattern 2\", \"\\n\")\n",
+    "print(re.sub(pattern2, \"<REDACTED>\", llw))\n"
    ]
   },
   {
@@ -463,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
