--- a/Homework/Introcl_homework_1.ipynb
+++ b/Homework/Introcl_homework_1.ipynb
@@ -86,7 +86,17 @@
    "source": [
     "*(your text answer here: double-click to edit)*\n",
     "\n",
-    "Variable e is valid, but it shouldn't be used as a variable name. \"if\" is a statement in Python and problems can arise if it is redefined as a variable."
+    "Variable e is valid, but it shouldn't be used as a variable name. \"sum\" is a pre-defined in Python and problems can arise if it is redefined as a variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TO-DO\n",
+    "#Ask Will if \"if\" is also a valid/invalid name"
    ]
   },
   {
@@ -200,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -210,9 +220,9 @@
       "Is Digit:  \n",
       "\n",
       "a.  <re.Match object; span=(0, 5), match='12345'>\n",
-      "b.  None\n",
+      "b.  None \n",
       "\n",
-      " Is Alpha:  \n",
+      "Is Alpha:  \n",
       "\n",
       "c.  <re.Match object; span=(0, 5), match='AbCDe'>\n",
       "d.  None\n"
@@ -237,14 +247,14 @@
     "\n",
     "print(\"Is Digit: \", \"\\n\")\n",
     "print(\"a. \", re.search(regex_isdigit, a))\n",
-    "print(\"b. \", re.search(regex_isdigit, b))\n",
+    "print(\"b. \", re.search(regex_isdigit, b), \"\\n\")\n",
     "\n",
     "# regular expression that matches whenever isalpha() returns True,\n",
     "# and does not match otherwise\n",
     "\n",
     "regex_isalpha = r\"^[A-Za-z]*$\"\n",
     "\n",
-    "print(\"\\n\", \"Is Alpha: \", \"\\n\")\n",
+    "print(\"Is Alpha: \", \"\\n\")\n",
     "print(\"c. \", re.search(regex_isalpha, c))\n",
     "print(\"d. \", re.search(regex_isalpha, d))"
    ]
@@ -383,33 +393,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "And Peter with  sword still drawn in  hand went with \n",
-      "the  to the eastern edge of the hill-top.  There a beautiful \n",
-      "sight met their .  The sun   behind their .  \n",
-      "That meant that the whole country below them lay in the  \n",
-      "light--forest and  and  and,  away like a \n",
+      "And Peter with hi sword still drawn in hi hand went with \n",
+      "the L to the eastern edge of the hill-top.  There a beautiful \n",
+      "sight met their eye.  The sun wa sett behind their back.  \n",
+      "That meant that the whole country below them lay in the even \n",
+      "light--forest and hill and valley and, wind away like a \n",
       "silver snake, the lower part of the great river.  And beyond \n",
-      "all ,  away,  the sea, and beyond\n",
-      "the sea the sky, full of  which were just  rose colour\n",
-      "with the  of the sunset.  But just where the land of Narnia\n",
-      "met the sea--in fact, at the mouth of the great river--there \n",
-      " on a little hill, .  It   because it  a\n",
-      "castle and of course the sunlight   from all the \n",
-      "which   Peter and the sunset; but to Peter it  like\n",
-      "a great star  on the seashore.\n"
+      "all thi, mile away, wa the sea, and beyond\n",
+      "the sea the sky, full of cloud which were just turn rose colour\n",
+      "with the reflect of the sunset.  But just where the land of Narnia\n",
+      "met the sea--in fact, at the mouth of the great river--there wa\n",
+      "someth on a little hill, shin.  It wa shin because it wa a\n",
+      "castle and of course the sunlight wa reflect from all the window\n",
+      "which look toward Peter and the sunset; but to Peter it look like\n",
+      "a great star rest on the seashore.\n"
      ]
     }
    ],
    "source": [
     "# your code here\n",
-    "print(re.sub(r\"[A-Za-z]*(ing|ed|ion|s)\\b\", \"\", llw))"
+    "print(re.sub(r\"(ing|ed|ion|s)\\b\", \"\", llw))"
    ]
   },
   {
@@ -427,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +454,7 @@
       "silver snake, the lower part of the great river.  And beyond \n",
       "all this, miles away, was the sea, and beyond\n",
       "the sea the sky, full of clouds which were just turning rose colour\n",
-      "with the <REDACTED> of the sunset.  But just where the land of Narnia\n",
+      "with the  of the sunset.  But just where the land of Narnia\n",
       "met the sea--in fact, at the mouth of the great river--there was\n",
       "something on a little hill, shining.  It was shining because it was a\n",
       "castle and of course the sunlight was reflected from all the windows\n",
@@ -455,17 +465,17 @@
       "\n",
       "And Peter with his sword still drawn in his hand went with \n",
       "the Lion to the eastern edge of the hill-top.  There a beautiful \n",
-      "sight met their <REDACTED>.  The sun was setting behind their backs.  \n",
+      "sight met their .  The sun was setting behind their backs.  \n",
       "That meant that the whole country below them lay in the evening \n",
-      "light--forest and hills and <REDACTED> and, winding away like a \n",
+      "light--forest and hills and  and, winding away like a \n",
       "silver snake, the lower part of the great river.  And beyond \n",
-      "all <REDACTED>, miles away, was the sea, and beyond\n",
+      "all , miles away, was the sea, and beyond\n",
       "the sea the sky, full of clouds which were just turning rose colour\n",
       "with the reflection of the sunset.  But just where the land of Narnia\n",
       "met the sea--in fact, at the mouth of the great river--there was\n",
       "something on a little hill, shining.  It was shining because it was a\n",
-      "castle and of course the sunlight was reflected from all the <REDACTED>\n",
-      "which looked <REDACTED> Peter and the sunset; but to Peter it looked like\n",
+      "castle and of course the sunlight was reflected from all the \n",
+      "which looked  Peter and the sunset; but to Peter it looked like\n",
       "a great star resting on the seashore.\n"
      ]
     }
@@ -476,12 +486,12 @@
     "pattern1 = r\"\\b[A-Za-z][A-Za-z]+ion\\b\"\n",
     "\n",
     "print(\"Pattern 1\", \"\\n\")\n",
-    "print(re.sub(pattern1, \"<REDACTED>\", llw), \"\\n\")\n",
+    "print(re.sub(pattern1, \"\", llw), \"\\n\")\n",
     "\n",
     "pattern2 = r\"\\b([A-Za-z][A-Za-z][A-Za-z])+s\\b\"\n",
     "\n",
     "print(\"Pattern 2\", \"\\n\")\n",
-    "print(re.sub(pattern2, \"<REDACTED>\", llw))\n"
+    "print(re.sub(pattern2, \"\", llw))\n"
    ]
   },
   {
