--- a/Homework/Introcl_homework_1.ipynb
+++ b/Homework/Introcl_homework_1.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,33 +387,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "And Peter with hi sword still drawn in hi hand went with \n",
-      "the L to the eastern edge of the hill-top.  There a beautiful \n",
-      "sight met their eye.  The sun wa sett behind their back.  \n",
-      "That meant that the whole country below them lay in the even \n",
-      "light--forest and hill and valley and, wind away like a \n",
+      "And Peter with hi<R> sword still drawn in hi<R> hand went with \n",
+      "the L<R> to the eastern edge of the hill-top.  There a beautiful \n",
+      "sight met their eye<R>.  The sun wa<R> sett<R> behind their back<R>.  \n",
+      "That meant that the whole country below them lay in the even<R> \n",
+      "light--forest and hill<R> and valley<R> and, wind<R> away like a \n",
       "silver snake, the lower part of the great river.  And beyond \n",
-      "all thi, mile away, wa the sea, and beyond\n",
-      "the sea the sky, full of cloud which were just turn rose colour\n",
-      "with the reflect of the sunset.  But just where the land of Narnia\n",
-      "met the sea--in fact, at the mouth of the great river--there wa\n",
-      "someth on a little hill, shin.  It wa shin because it wa a\n",
-      "castle and of course the sunlight wa reflect from all the window\n",
-      "which look toward Peter and the sunset; but to Peter it look like\n",
-      "a great star rest on the seashore.\n"
+      "all thi<R>, mile<R> away, wa<R> the sea, and beyond\n",
+      "the sea the sky, full of cloud<R> which were just turn<R> rose colour\n",
+      "with the reflect<R> of the sunset.  But just where the land of Narnia\n",
+      "met the sea--in fact, at the mouth of the great river--there wa<R>\n",
+      "someth<R> on a little hill, shin<R>.  It wa<R> shin<R> because it wa<R> a\n",
+      "castle and of course the sunlight wa<R> reflect<R> from all the window<R>\n",
+      "which look<R> toward<R> Peter and the sunset; but to Peter it look<R> like\n",
+      "a great star rest<R> on the seashore.\n"
      ]
     }
    ],
    "source": [
     "# your code here\n",
-    "print(re.sub(r\"(ing|ed|ion|s)\\b\", \"\", llw))"
+    "print(re.sub(r\"(ing|ed|ion|s)\\b\", \"<R>\", llw))"
    ]
   },
   {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
       "silver snake, the lower part of the great river.  And beyond \n",
       "all this, miles away, was the sea, and beyond\n",
       "the sea the sky, full of clouds which were just turning rose colour\n",
-      "with the  of the sunset.  But just where the land of Narnia\n",
+      "with the <REDACTED> of the sunset.  But just where the land of Narnia\n",
       "met the sea--in fact, at the mouth of the great river--there was\n",
       "something on a little hill, shining.  It was shining because it was a\n",
       "castle and of course the sunlight was reflected from all the windows\n",
@@ -459,17 +459,17 @@
       "\n",
       "And Peter with his sword still drawn in his hand went with \n",
       "the Lion to the eastern edge of the hill-top.  There a beautiful \n",
-      "sight met their .  The sun was setting behind their backs.  \n",
+      "sight met their <REDACTED>.  The sun was setting behind their backs.  \n",
       "That meant that the whole country below them lay in the evening \n",
-      "light--forest and hills and  and, winding away like a \n",
+      "light--forest and hills and <REDACTED> and, winding away like a \n",
       "silver snake, the lower part of the great river.  And beyond \n",
-      "all , miles away, was the sea, and beyond\n",
+      "all <REDACTED>, miles away, was the sea, and beyond\n",
       "the sea the sky, full of clouds which were just turning rose colour\n",
       "with the reflection of the sunset.  But just where the land of Narnia\n",
       "met the sea--in fact, at the mouth of the great river--there was\n",
       "something on a little hill, shining.  It was shining because it was a\n",
-      "castle and of course the sunlight was reflected from all the \n",
-      "which looked  Peter and the sunset; but to Peter it looked like\n",
+      "castle and of course the sunlight was reflected from all the <REDACTED>\n",
+      "which looked <REDACTED> Peter and the sunset; but to Peter it looked like\n",
       "a great star resting on the seashore.\n"
      ]
     }
@@ -480,12 +480,12 @@
     "pattern1 = r\"\\b[A-Za-z][A-Za-z]+ion\\b\"\n",
     "\n",
     "print(\"Pattern 1\", \"\\n\")\n",
-    "print(re.sub(pattern1, \"\", llw), \"\\n\")\n",
+    "print(re.sub(pattern1, \"<REDACTED>\", llw), \"\\n\")\n",
     "\n",
     "pattern2 = r\"\\b([A-Za-z][A-Za-z][A-Za-z])+s\\b\"\n",
     "\n",
     "print(\"Pattern 2\", \"\\n\")\n",
-    "print(re.sub(pattern2, \"\", llw))\n"
+    "print(re.sub(pattern2, \"<REDACTED>\", llw))\n"
    ]
   },
   {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -717,11 +717,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
    }
   }
  },
