--- a/Homework/Introcl_homework_1.ipynb
+++ b/Homework/Introcl_homework_1.ipynb
@@ -70,7 +70,7 @@
    "source": [
     "*(your text answer here: double-click to edit)*\n",
     "\n",
-    "Variables a, c, and h are not valid variable names. Variables a and h are disjointed, the words are not connected, making it invalid. C is connected by a dash instead of an underscore, making it invalid."
+    "Variables a, c, e, and h are not valid variable names. Variables a and h are disjointed, the words are not connected, making it invalid. E is the keyword \"if\" and is invalid due to being a keyword. C is connected by a dash instead of an underscore, making it invalid."
    ]
   },
   {
@@ -87,16 +87,6 @@
     "*(your text answer here: double-click to edit)*\n",
     "\n",
     "Variable e is valid, but it shouldn't be used as a variable name. \"sum\" is a pre-defined in Python and problems can arise if it is redefined as a variable."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#TO-DO\n",
-    "#Ask Will if \"if\" is also a valid/invalid name"
    ]
   },
   {
@@ -126,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,33 +377,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "And Peter with hi<R> sword still drawn in hi<R> hand went with \n",
-      "the L<R> to the eastern edge of the hill-top.  There a beautiful \n",
-      "sight met their eye<R>.  The sun wa<R> sett<R> behind their back<R>.  \n",
-      "That meant that the whole country below them lay in the even<R> \n",
-      "light--forest and hill<R> and valley<R> and, wind<R> away like a \n",
+      "And Peter with hi<REDACTED> sword still drawn in hi<REDACTED> hand went with \n",
+      "the L<REDACTED> to the eastern edge of the hill-top.  There a beautiful \n",
+      "sight met their eye<REDACTED>.  The sun wa<REDACTED> sett<REDACTED> behind their back<REDACTED>.  \n",
+      "That meant that the whole country below them lay in the even<REDACTED> \n",
+      "light--forest and hill<REDACTED> and valley<REDACTED> and, wind<REDACTED> away like a \n",
       "silver snake, the lower part of the great river.  And beyond \n",
-      "all thi<R>, mile<R> away, wa<R> the sea, and beyond\n",
-      "the sea the sky, full of cloud<R> which were just turn<R> rose colour\n",
-      "with the reflect<R> of the sunset.  But just where the land of Narnia\n",
-      "met the sea--in fact, at the mouth of the great river--there wa<R>\n",
-      "someth<R> on a little hill, shin<R>.  It wa<R> shin<R> because it wa<R> a\n",
-      "castle and of course the sunlight wa<R> reflect<R> from all the window<R>\n",
-      "which look<R> toward<R> Peter and the sunset; but to Peter it look<R> like\n",
-      "a great star rest<R> on the seashore.\n"
+      "all thi<REDACTED>, mile<REDACTED> away, wa<REDACTED> the sea, and beyond\n",
+      "the sea the sky, full of cloud<REDACTED> which were just turn<REDACTED> rose colour\n",
+      "with the reflect<REDACTED> of the sunset.  But just where the land of Narnia\n",
+      "met the sea--in fact, at the mouth of the great river--there wa<REDACTED>\n",
+      "someth<REDACTED> on a little hill, shin<REDACTED>.  It wa<REDACTED> shin<REDACTED> because it wa<REDACTED> a\n",
+      "castle and of course the sunlight wa<REDACTED> reflect<REDACTED> from all the window<REDACTED>\n",
+      "which look<REDACTED> toward<REDACTED> Peter and the sunset; but to Peter it look<REDACTED> like\n",
+      "a great star rest<REDACTED> on the seashore.\n"
      ]
     }
    ],
    "source": [
     "# your code here\n",
-    "print(re.sub(r\"(ing|ed|ion|s)\\b\", \"<R>\", llw))"
+    "print(re.sub(r\"(ing|ed|ion|s)\\b\", \"<REDACTED>\", llw))"
    ]
   },
   {
@@ -431,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +438,7 @@
       "silver snake, the lower part of the great river.  And beyond \n",
       "all this, miles away, was the sea, and beyond\n",
       "the sea the sky, full of clouds which were just turning rose colour\n",
-      "with the <REDACTED> of the sunset.  But just where the land of Narnia\n",
+      "with the reflect of the sunset.  But just where the land of Narnia\n",
       "met the sea--in fact, at the mouth of the great river--there was\n",
       "something on a little hill, shining.  It was shining because it was a\n",
       "castle and of course the sunlight was reflected from all the windows\n",
@@ -459,17 +449,17 @@
       "\n",
       "And Peter with his sword still drawn in his hand went with \n",
       "the Lion to the eastern edge of the hill-top.  There a beautiful \n",
-      "sight met their <REDACTED>.  The sun was setting behind their backs.  \n",
+      "sight met their eye.  The sun was setting behind their back.  \n",
       "That meant that the whole country below them lay in the evening \n",
-      "light--forest and hills and <REDACTED> and, winding away like a \n",
+      "light--forest and hill and valley and, winding away like a \n",
       "silver snake, the lower part of the great river.  And beyond \n",
-      "all <REDACTED>, miles away, was the sea, and beyond\n",
-      "the sea the sky, full of clouds which were just turning rose colour\n",
+      "all thi, mile away, was the sea, and beyond\n",
+      "the sea the sky, full of cloud which were just turning rose colour\n",
       "with the reflection of the sunset.  But just where the land of Narnia\n",
       "met the sea--in fact, at the mouth of the great river--there was\n",
       "something on a little hill, shining.  It was shining because it was a\n",
-      "castle and of course the sunlight was reflected from all the <REDACTED>\n",
-      "which looked <REDACTED> Peter and the sunset; but to Peter it looked like\n",
+      "castle and of course the sunlight was reflected from all the window\n",
+      "which looked toward Peter and the sunset; but to Peter it looked like\n",
       "a great star resting on the seashore.\n"
      ]
     }
@@ -477,15 +467,15 @@
    "source": [
     "# your code here\n",
     "\n",
-    "pattern1 = r\"\\b[A-Za-z][A-Za-z]+ion\\b\"\n",
+    "pattern1 = r\"\\b(\\w\\w+)(ion)\\b\"\n",
     "\n",
     "print(\"Pattern 1\", \"\\n\")\n",
-    "print(re.sub(pattern1, \"<REDACTED>\", llw), \"\\n\")\n",
+    "print(re.sub(pattern1, r\"\\1\", llw), \"\\n\")\n",
     "\n",
-    "pattern2 = r\"\\b([A-Za-z][A-Za-z][A-Za-z])+s\\b\"\n",
+    "pattern2 = r\"\\b(\\w\\w\\w+)(s)\\b\"\n",
     "\n",
     "print(\"Pattern 2\", \"\\n\")\n",
-    "print(re.sub(pattern2, \"<REDACTED>\", llw))\n"
+    "print(re.sub(pattern2, r\"\\1\", llw))\n"
    ]
   },
   {
@@ -503,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -654,10 +644,10 @@
     "#date removal\n",
     "\n",
     "print(\"c. TEXT ONE\", \"\\n\")\n",
-    "print(re.sub(r\"[0-9][0-9]-[0-9][0-9]-[0-9][0-9][0-9][0-9]|[A-Z][a-z][a-z].\\s[0-9][0-9]?,\\s[0-9][0-9][0-9][0-9]\", \"<DATE>\", text1), \"\\n\")\n",
+    "print(re.sub(r\"\\d\\d-\\d\\d-\\d\\d\\d\\d|[A-Z][a-z][a-z].\\s\\d\\d?,\\s\\d\\d\\d\\d\", \"<DATE>\", text1), \"\\n\")\n",
     "\n",
     "print(\"c. TEXT TWO\", \"\\n\")\n",
-    "print(re.sub(r\"[0-9][0-9]-[0-9][0-9]-[0-9][0-9][0-9][0-9]|[A-Z][a-z][a-z].\\s[0-9][0-9]?,\\s[0-9][0-9][0-9][0-9]\", \"<DATE>\", text2))"
+    "print(re.sub(r\"\\d\\d-\\d\\d-\\d\\d\\d\\d|[A-Z][a-z][a-z].\\s\\d\\d?,\\s\\d\\d\\d\\d\", \"<DATE>\", text2))"
    ]
   },
   {
@@ -703,7 +693,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -717,11 +707,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
