--- a/Homework/Introcl_homework_1.ipynb
+++ b/Homework/Introcl_homework_1.ipynb
@@ -285,7 +285,7 @@
       "<re.Match object; span=(44, 46), match=';)'>\n",
       "<re.Match object; span=(18, 21), match='8-)'>\n",
       "<re.Match object; span=(22, 26), match=';-))'>\n",
-      "<re.Match object; span=(38, 41), match='8-/'>\n",
+      "<re.Match object; span=(33, 36), match=\":')\">\n",
       "<re.Match object; span=(56, 59), match=':-('>\n",
       "<re.Match object; span=(32, 35), match=':-('>\n"
      ]
@@ -325,7 +325,7 @@
     "\n",
     "smiley3 = r\"(:|;|8)'?-?(\\(|\\)|\\/|D)*\"\n",
     "\n",
-    "print(re.search(smiley3, tweet7))\n",
+    "print(re.search(smiley3, \"House of the Dragon just dropped :')\"))\n",
     "print(re.search(smiley3, tweet8))\n",
     "print(re.search(smiley3, tweet9))"
    ]
@@ -384,26 +384,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "And Peter with hi<REDACTED> sword still drawn in hi<REDACTED> hand went with \n",
-      "the L<REDACTED> to the eastern edge of the hill-top.  There a beautiful \n",
-      "sight met their eye<REDACTED>.  The sun wa<REDACTED> sett<REDACTED> behind their back<REDACTED>.  \n",
-      "That meant that the whole country below them lay in the even<REDACTED> \n",
-      "light--forest and hill<REDACTED> and valley<REDACTED> and, wind<REDACTED> away like a \n",
+      "And Peter with hi sword still drawn in hi hand went with \n",
+      "the L to the eastern edge of the hill-top.  There a beautiful \n",
+      "sight met their eye.  The sun wa sett behind their back.  \n",
+      "That meant that the whole country below them lay in the even \n",
+      "light--forest and hill and valley and, wind away like a \n",
       "silver snake, the lower part of the great river.  And beyond \n",
-      "all thi<REDACTED>, mile<REDACTED> away, wa<REDACTED> the sea, and beyond\n",
-      "the sea the sky, full of cloud<REDACTED> which were just turn<REDACTED> rose colour\n",
-      "with the reflect<REDACTED> of the sunset.  But just where the land of Narnia\n",
-      "met the sea--in fact, at the mouth of the great river--there wa<REDACTED>\n",
-      "someth<REDACTED> on a little hill, shin<REDACTED>.  It wa<REDACTED> shin<REDACTED> because it wa<REDACTED> a\n",
-      "castle and of course the sunlight wa<REDACTED> reflect<REDACTED> from all the window<REDACTED>\n",
-      "which look<REDACTED> toward<REDACTED> Peter and the sunset; but to Peter it look<REDACTED> like\n",
-      "a great star rest<REDACTED> on the seashore.\n"
+      "all thi, mile away, wa the sea, and beyond\n",
+      "the sea the sky, full of cloud which were just turn rose colour\n",
+      "with the reflect of the sunset.  But just where the land of Narnia\n",
+      "met the sea--in fact, at the mouth of the great river--there wa\n",
+      "someth on a little hill, shin.  It wa shin because it wa a\n",
+      "castle and of course the sunlight wa reflect from all the window\n",
+      "which look toward Peter and the sunset; but to Peter it look like\n",
+      "a great star rest on the seashore.\n"
      ]
     }
    ],
    "source": [
     "# your code here\n",
-    "print(re.sub(r\"(ing|ed|ion|s)\\b\", \"<REDACTED>\", llw))"
+    "print(re.sub(r\"(ing|ed|ion|s)\\b\", \"\", llw))"
    ]
   },
   {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -684,16 +684,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The Insider is a Russian news website. I chose an article about workers that oppose the Russian invasion of Ukraine and how labor unions are trying to defend them. \n",
+    "\n",
+    "Here's the Russian title:\n",
+    "\n",
+    "[**«Уволен за антивоенную позицию». Как профсоюзные активисты помогают выступающим против войны**](https://theins.ru/obshestvo/253613)\n",
+    "\n",
+    "Here is the same title, translated by the website, not by Google:\n",
+    "\n",
+    "[**“Fired for my anti-war stance” How Russian trade unions defend the labor rights of those opposed to the invasion**](https://theins.ru/en/society/254455)\n",
+    "\n",
+    "Here is how [Google Translate](https://translate.google.com/) interpretted it:\n",
+    "\n",
+    "**\"Fired for being anti-war.\" How trade union activists single out those who oppose the war**\n",
+    "\n",
+    "The tool changed \"defend\" to \"single out\". It's a small change, but it implies that trade unions are working against labor rights instead of for them.\n",
+    "\n",
+    "--\n",
+    "\n",
+    "With complex long sentences, it falls short in a similar way.\n",
+    "\n",
+    "Here's the Russian from the website:\n",
+    "\n",
+    "[**Многие россияне, выступающие против войны с Украиной, оказались из-за своей позиции на грани увольнения. Узнав о задержании своего подчиненного на митинге, увидев у него в соцсетях оппозиционные посты или даже просто услышав антивоенные разговоры, руководство как государственных, так и частных предприятий стремится избавиться от «неблагонадежного» работника. Самый простой способ для этого — убедить написать заявление об увольнении по собственному желанию. Несмотря на то что такие требования абсолютно незаконны, а такая форма увольнения не влечет за собой никаких компенсирующих выплат со стороны предприятия, люди поддаются этому давлению и соглашаются уйти с работы на невыгодных для себя условиях. Под страхом репрессий отстаивать людям свои трудовые права помогают профсоюзные активисты.**](https://theins.ru/obshestvo/253613)\n",
+    "\n",
+    "Here's their English translation:\n",
+    "\n",
+    "[**Many Russians who have been bold enough to speak out against the war in Ukraine are on the brink of losing their jobs. Public and private sector employers alike tend to play safe, getting rid of employees who oppose the war on social media, out in the streets, or even in workplace conversations. Under pressure from superiors, many such activists agree to resign voluntarily, losing their due severance pay along with their jobs. Despite the risk of repression, trade unions have stepped in to help anti-war Russians defend their labor rights.**](https://theins.ru/en/society/254455)\n",
+    "\n",
+    "Here's Google's translation:\n",
+    "\n",
+    "**Many Russians who oppose the war with Ukraine have found themselves on the verge of being fired because of their position. Having learned about the detention of their subordinate at a rally, having seen his opposition posts on social networks, or even just hearing anti-war conversations, the management of both state and private enterprises seeks to get rid of the “unreliable” employee. The easiest way to do this is to convince them to write a letter of resignation of their own free will. Despite the fact that such demands are absolutely illegal, and this form of dismissal does not entail any compensatory payments from the enterprise, people succumb to this pressure and agree to leave work on unfavorable conditions for themselves. Under the fear of reprisals, trade union activists help people to defend their labor rights.**\n",
+    "\n",
+    "Words are shuffled around, simple phrases are unnecessarily complicated, and the power of some statements become lost in the confusion of translation.\n",
+    "\n",
+    "--\n",
+    "\n",
+    "I couldn't find any Russian puns, but I found some Russian jokes.\n",
+    "\n",
+    "**Выкуренная сигарета сокращает жизнь на 2 часа, выпитая бутылка водки - на 3. Рабочий день сокращает жизнь на 8 часов.**\n",
+    "\n",
+    "Translates to:\n",
+    "\n",
+    "**One cigarette reduces your life by 2 hours, one bottle of vodka - 3 hours. Your working day reduces your life by 8 hours.**\n",
+    "\n",
+    "Google translates at as:\n",
+    "\n",
+    "**A smoked cigarette shortens life by 2 hours, a drunk bottle of vodka - by 3. A working day reduces life by 8 hours.**\n",
+    "\n",
+    "The translation is better than the complex sentence translation, but the sharpness of the joke is lost."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -707,11 +755,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
    }
   }
  },
